--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,19 @@ description = "SQL based job scheduler to handle GPU jobs for Hen Lab Server"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-  "altair",
-  "cryptography",
-  "easygui",
-  "libtmux",
-  "pandas",
-  "psutil",
-  "streamlit",
-  "tabulate",
-  "tomli",
+  "altair>=4.1.0",
+  "cryptography>=42.0.0",
+  "easygui>=0.98.3",
+  "fastapi>=0.68.0",
+  "jinja2>=3.0.0",
+  "libtmux>=0.28.0",
+  "pandas>=1.3.0",
+  "psutil>=5.9.0",
+  "python-multipart>=0.0.5",
+  "streamlit>=1.31.0",
+  "tabulate>=0.9.0",
+  "tomli>=2.0.0",
+  "uvicorn>=0.15.0",
 ]
 
 
