--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 # Core dependencies
-altair>=5.2.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+jinja2>=3.0.0
+python-multipart>=0.0.5
+pandas>=1.3.0
+altair>=4.1.0
 cryptography>=42.0.0
 easygui>=0.98.3
+fastapi>=0.115.4
 libtmux>=0.28.0
-pandas>=2.2.0
 streamlit>=1.31.0
 tabulate>=0.9.0
 psutil>=5.9.0
