--- a/frontend4JL/tsconfig.app.json
+++ b/frontend4JL/tsconfig.app.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "baseUrl": ".",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
