--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "sqljobscheduler"
 version = "0.1.1"
-description = "SQL based job scheduler to handle GPU jobs for Hen Lab Server"
+description = "SQL based job scheduler to handle GPU jobs"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
