--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sqljobscheduler"
-version = "0.1.1"
+version = "0.1.2"
 description = "SQL based job scheduler to handle GPU jobs"
+authors = [{ name = "Alex Hurowitz" }]
 readme = "README.md"
+keywords = ["sql", "scheduler", "gpu", "job scheduler"]
 requires-python = ">=3.9"
 dependencies = [
   "altair>=4.1.0",
